plugins {
    id 'org.inferred.processors' version '3.3.0'
}

apply plugin: 'java'
apply plugin: 'idea'

group 'com.glenncode'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

repositories {
    mavenCentral()
    maven {
        url "https://plugins.gradle.org/m2/"
    }
}

dependencies {
    // https://mvnrepository.com/artifact/postgresql/postgresql
    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'

    compileOnly group: 'org.immutables', name: 'value', version: '2.5.3'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.6.7'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.7'
    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.1'
    compile group: 'joda-time', name: 'joda-time', version: '2.3'
    compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4.jre7'
    compile group: 'se.michaelthelin.spotify', name: 'spotify-web-api-java', version: '1.5.0'

    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.8.47'
    testCompile group: 'commons-io', name: 'commons-io', version: '2.6'

    runtime group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.1'

    runtime group: 'com.google.guava', name: 'guava', version: '18.0'
    runtime group: 'org.yaml', name: 'snakeyaml', version: '1.18'

    annotationProcessor "org.immutables:value:2.5.3"
}

compileJava {
    options.annotationProcessorPath = configurations.annotationProcessor
}
